[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py37']

[tool.poetry]
name = "cfgs"
version = "0.12.0"
description = "🍇 XDG standard config files 🍇"
authors = ["Tom Ritchford <tom@swirly.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
coverage = "^7.1.0"
flake8 = "5.0.4"
import-all = "^0.9.5"
pyfakefs = "^5.1.0"
pytest = "^7.2.1"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
